Fixed photo border alignment

--- a/src/views/Info/WhyCook.css
+++ b/src/views/Info/WhyCook.css
@@ -97,7 +97,7 @@
 .whycook-cooks-pic {
     border: 2px solid #d3d3d3;
     padding: 3px;
-    height: 295px;
+    height: 280px;
 }
 
 @media all and (max-width: 767px) {
